# auth-rust

./: .env.example  Cargo.toml  LICENSE  README.md  ROADMAP.md
examples/: mongodb_setup.rs
migrations/: 001_create_users_postgres.sql  002_create_users_mysql.sql  003_create_users_sqlite.sql  README_MONGODB.md
src/: errors.rs  lib.rs  main.rs
src/auth/: crypto.rs  extractor.rs  jwt.rs  mod.rs
src/db/: memory_connection.rs  mod.rs  mongodb_connection.rs  mysql_connection.rs  postgres_connection.rs  sqlite_connection.rs  user_repository.rs
src/handlers/: auth_handler.rs
src/models/: auth.rs  mod.rs  user.rs  validation.rs
