[package]
name = "auth-system"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = "0.8.8"
bcrypt = "0.18.0"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"]}
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["serde", "v4"]}
validator = {version = "0.20.0", features = ["derive"]}

# Dependências opcionais dos bancos de dados
# Banco de dados SQL (PostgreSQL, MySQL, SQLite)
[dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite", "uuid", "chrono"]
optional = true

# MongoDB (NoSQL)
[dependencies.mongodb]
version = "3.1"
optional = true

[dependencies.bson]
version = "2.13"
features = ["chrono-0_4", "uuid-1"]
optional = true

[features]
# Feature padrão (sem banco)
default = []

# Features para bancos de dados
postgres = ["sqlx"]
mysql = ["sqlx"]
sqlite = ["sqlx"]
mongodb = ["dep:mongodb", "dep:bson"]

[[example]]
name = "mongodb_setup"
required-features = ["mongodb"]
